[package]
name = "hlsenpai"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = "8.0.0"
anyhow = "1.0"
iced = { version = "0.14.0", features = ["markdown", "tokio"] }
rfd = "0.15.4"
iced_video_player = "*"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
walkdir = "2.5"
